--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
 	"readme": "https://github.com/ShayanTheNerd/virtual-keyboard#readme",
 	"author": {
 		"name": "Shayan Zamani",
-		"email": "sh.zamani384@gmail.com",
-		"url": "https://shayan-zamani.me/"
+		"url": "https://shayan-zamani.me/",
+		"email": "sh.zamani384@gmail.com"
 	},
 	"keywords": [
 		"html css js",
+		"light/dark mode",
+		"virtual keyboard",
 		"responsive design",
-		"quadratic equation solver",
 		"tailwindcss CLI template"
 	],
 	"description": "Experience virtual typing!",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ShayanTheNerd/virtual-keyboard",
-		"directory": "main"
+		"directory": "main",
+		"url": "https://github.com/ShayanTheNerd/virtual-keyboard"
 	},
 	"bugs": {
-		"url": "https://github.com/ShayanTheNerd/virtual-keyboard/issues",
-		"email": "sh.zamani384@gmail.com"
+      "email": "sh.zamani384@gmail.com",
+		"url": "https://github.com/ShayanTheNerd/virtual-keyboard/issues"
 	},
 	"devDependencies": {
 		"prettier": "^2.8.7",
@@ -29,8 +30,8 @@
 		"tailwindcss": "^3.3.1"
 	},
 	"scripts": {
+		"format": "npx prettier --write .",
 		"dev": "npx tailwindcss -i ./assets/css/tw-input.css -o ./assets/css/styles.css --watch",
-		"build": "npx tailwindcss -i ./assets/css/tw-input.css -o ./assets/css/styles.css --minify",
-		"format": "npx prettier --write ."
+		"build": "npx tailwindcss -i ./assets/css/tw-input.css -o ./assets/css/styles.css --minify"
 	}
 }
